<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_dashboard"
            android:title="@string/menu_dashboard"
            android:icon="@drawable/ic_menu_dashboard" />
        <item
            android:id="@+id/menu_gallery"
            android:title="@string/menu_address"
            android:icon="@drawable/ic_menu_address" />
        <item
            android:id="@+id/menu_history"
            android:title="@string/menu_history"
            android:icon="@drawable/ic_menu_history">
        </item>
        <item
            android:id="@+id/menu_invoice"
            android:title="@string/menu_invoice"
            android:icon="@drawable/ic_menu_invoices"
    </group>
</menu>