<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <EditText android:id="@+id/date_primary"
                android:hint="@string/tracking_hint_date_primary"
                android:layout_marginEnd="10dp"
                style="@style/editTextStyle"
                android:inputType="date"/>
            <EditText android:id="@+id/date_secondary"
                android:hint="@string/tracking_hint_date_secondary"
                style="@style/editTextStyle"
                android:inputType="date"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <EditText android:id="@+id/order_number"
                android:hint="@string/tracking_hint_order_number"
                android:layout_marginEnd="10dp"
                style="@style/editTextStyle"
                android:inputType="number"/>
            <EditText android:id="@+id/tracking_number"
                android:hint="@string/tracking_hint_tracking_number"
                style="@style/editTextStyle"
                android:inputType="number"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <EditText android:id="@+id/name"
                android:hint="@string/tracking_hint_name"
                android:layout_marginEnd="10dp"
                style="@style/editTextStyle"
                android:inputType="text"/>

            <Spinner android:id="@+id/transportation"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:entries="@array/transportation"
                android:prompt="@string/tracking_hint_transportation"
                android:theme="@style/spinnerStyle.Theme"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <Spinner android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/spinnerStyle.Theme"
                android:prompt="@string/tracking_hint_country"
                android:entries="@array/country"
                android:layout_marginEnd="10dp"/>
            <Spinner android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/spinnerStyle.Theme"
                android:prompt="@string/tracking_hint_status"
                android:entries="@array/status"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText android:id="@+id/ref"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:hint="@string/tracking_hint_ref"
                android:layout_marginEnd="10dp"
                style="@style/editTextStyle"
                android:inputType="text"/>
            <Spinner android:id="@+id/type"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:theme="@style/spinnerStyle.Theme"
                android:prompt="@string/tracking_hint_type"
                android:entries="@array/type"/>
        </LinearLayout>
        <ImageButton android:id="@+id/tracking_search"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bc_button"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/action_search"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>