<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="70dp"
    android:background="@drawable/gradient_background">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.sign.SignUpFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/login_card_background" >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:layout_marginBottom="25dp"
                        android:text="@string/sign_in_message"
                        android:textSize="@dimen/textSize_400"
                        android:textColor="@color/grey_100" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/sign_in_title"
                        android:textColor="@color/blue_500"
                        android:textSize="@dimen/textSize_400" />

                    <ImageButton
                        android:layout_width="@dimen/flag_width"
                        android:layout_height="@dimen/flag_height"
                        android:layout_gravity="end"
                        android:background="@drawable/ic_french_flag"
                        android:contentDescription="@string/french_flag_description"
                        android:src="@android:color/transparent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/login_input"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSize_300" />

                    <EditText android:id="@+id/sign_in_login"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/editText_height"
                        android:layout_marginBottom="20dp"
                        android:autofillHints="emailAddress|phone"
                        android:background="@drawable/bg_edit_text_border"
                        android:hint="@string/login_hint"
                        android:inputType="textEmailAddress|phone"
                        android:paddingHorizontal="@dimen/editText_paddingHorizontal"
                        android:paddingBottom="@dimen/editText_paddingBottom"
                        android:textSize="@dimen/textSize_200" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/password_input"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSize_300" />

                    <EditText android:id="@+id/sign_in_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/editText_height"
                        android:autofillHints="password"
                        android:background="@drawable/bg_edit_text_border"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:paddingHorizontal="@dimen/editText_paddingHorizontal"
                        android:paddingBottom="@dimen/editText_paddingBottom"
                        android:textSize="@dimen/textSize_200" />

                    <TextView android:id="@+id/sign_in_forgotten_pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="10dp"
                        android:text="@string/forgotten_password"
                        android:textColor="@color/blue_500"
                        android:textSize="@dimen/textSize_200" />

                    <Button android:id="@+id/sign_in_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/button_primary_bg"
                        android:text="@string/sign_in"
                        android:textAllCaps="false" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_account"
                            android:textColor="@color/grey_300"
                            android:textSize="@dimen/textSize_200" />

                        <TextView android:id="@+id/sign_up_link"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_in_link"
                            android:textColor="@color/blue_400"
                            android:textSize="@dimen/textSize_200" />

                    </LinearLayout>


                </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/copyright"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize_100" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>